Completed initial popup form, tested with the tile class. Official testing still needed